bay form layout bugfix

--- a/app/assets/stylesheets/bays.css.scss
+++ b/app/assets/stylesheets/bays.css.scss
@@ -13,10 +13,6 @@
     margin: 0;
     text-align: left;
   }
-  // for label in the main fieldset alignment
-  form fieldset label.color {
-    margin-right: 8px;
-  }
   label>abbr {
     display: none; // hide required mark *
   }
